--- a/.gitignore
+++ b/.gitignore
@@ -142,6 +142,6 @@ cython_debug/
 data/
 .idea/
 articles/
-hard_keyed_listing.csv
-hard_keyed_listing_io.csv
+articles_json/
+listings_tables/
 analysis.py
